# multi_object_tracking

./: .dockerignore  .gitignore  CMakeLists.txt  DOCKER.md  Dockerfile  Dockerfile.cpu  Hungarian.hpp  KalmanTracker.hpp  README.md  RESTRUCTURING_SUMMARY.md  Sort.cpp  Sort.hpp  TODO.md  Tracker.hpp  YoloV5.cpp  docker-compose.cpu.yml  docker-compose.yml  run.cpp  run_test.sh  versions.env
Detectors/: Detector.hpp
Detectors/YoloV5/: YoloV5.cpp  YoloV5.hpp
Trackers/: Tracker.hpp
Trackers/SORT/: Hungarian.cpp  KalmanTracker.cpp  Sort.cpp  Sort.hpp
app/: CMakeLists.txt  main.cpp
app/inc/: AppConfig.hpp  CommandLineParser.hpp  MultiObjectTrackingApp.hpp  utils.hpp
app/src/: CommandLineParser.cpp  MultiObjectTrackingApp.cpp  utils.cpp
cmake/: DependencyValidation.cmake  versions.cmake
detectors/: CMakeLists.txt  Detector.hpp
detectors/YoloV5/: YoloV5.cpp  YoloV5.hpp
docs/: Build_Instructions.md  Code_Examples.md  Multiple_Object_Tracking_Guide.md  System_Architecture.md  Tracking_Algorithms.md
include/: BaseTracker.hpp  BoTSORTWrapper.hpp  ByteTrackWrapper.hpp  Detection.hpp  SortWrapper.hpp  TrackConfig.hpp  TrackedObject.hpp
scripts/: mot_docker_cpu.sh  setup_dependencies.sh
trackers/: BoTSORTWrapper.cpp  ByteTrackWrapper.cpp  CMakeLists.txt  SortWrapper.cpp
trackers/BoTSORT/config/: tracker.ini
trackers/BoTSORT/include/: BoTSORT.h  DataType.h  GlobalMotionCompensation.h  KalmanFilter.h  KalmanFilterAccBased.h  ReID.h  lapjv.h  matching.h  profiler.h  track.h  utils.h
trackers/BoTSORT/src/: BoTSORT.cpp  GlobalMotionCompensation.cpp  KalmanFilter.cpp  KalmanFilterAccBased.cpp  ReID.cpp  lapjv.cpp  matching.cpp  track.cpp  utils.cpp
trackers/SORT/: Sort.cpp  Sort.hpp
