# Placeholder CMakeLists.txt for detectors directory
# This is a workaround for object-detection-inference CMakeLists.txt structure
# The actual detectors library comes from the fetched dependency

# Empty CMakeLists to satisfy add_subdirectory() call
message(STATUS "Using detectors from object-detection-inference dependency")
